added details to menu

--- a/unmin/ajax/sitemenu-fr.html
+++ b/unmin/ajax/sitemenu-fr.html
@@ -11,6 +11,32 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 			<li><a href="#project" class="item">Projet de la BOEW</a>
 				<ul class="sm list-unstyled" id="project" role="menu">
 					<li><a href="http://wet-boew.github.io/v4.0-ci/index-fr.html#apropos">À propos de la Boîte à outils de l’expérience Web</a></li>
+
+
+			<li>
+				<details>
+					<summary>Service Canada</summary>
+					<ul role="menu">
+						<li><a href="#"></a>Link</li>
+						<li><a href="#"></a>Link</li>
+						<li><a href="#"></a>Link</li>
+						<li><a href="#"></a>Link</li>
+					</ul>
+				</details>
+				<details>
+					<summary>Service Canada</summary>
+					<ul role="menu">
+						<li><a href="#"></a>Link</li>
+						<li><a href="#"></a>Link</li>
+						<li><a href="#"></a>Link</li>
+						<li><a href="#"></a>Link</li>
+					</ul>
+				</details>
+			</li>
+
+
+
+
 					<li><a href="http://wet-boew.github.io/v4.0-ci/index-en.html#avantages">Avantages</a></li>
 					<li><a href="http://wet-boew.github.io/wet-boew/docs/ref/accolades-fr.html">Primes, articles et vidéos</a></li>
 					<li><a href="http://wet-boew.github.io/wet-boew/docs/events-fr.html">Événements</a></li>
