--- a/unmin/ajax/sitemenu-en.html
+++ b/unmin/ajax/sitemenu-en.html
@@ -11,6 +11,32 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 			<li><a href="#project" class="item">WET project</a>
 				<ul class="sm list-unstyled" id="project" role="menu">
 					<li><a href="http://wet-boew.github.io/v4.0-ci/index-en.html#about">About the Web Experience Toolkit</a></li>
+
+
+			<li>
+				<details>
+					<summary>Service Canada</summary>
+					<ul role="menu">
+						<li><a href="#"></a>Link</li>
+						<li><a href="#"></a>Link</li>
+						<li><a href="#"></a>Link</li>
+						<li><a href="#"></a>Link</li>
+					</ul>
+				</details>
+			</li>
+			<li>
+				<details>
+					<summary>Service Canada</summary>
+					<ul role="menu">
+						<li><a href="#"></a>Link</li>
+						<li><a href="#"></a>Link</li>
+						<li><a href="#"></a>Link</li>
+						<li><a href="#"></a>Link</li>
+					</ul>
+				</details>
+			</li>
+
+
 					<li><a href="http://wet-boew.github.io/v4.0-ci/index-en.html#benefits">Benefits</a></li>
 					<li><a href="http://wet-boew.github.io/wet-boew/docs/ref/accolades-en.html">Awards, articles and videos</a></li>
 					<li><a href="http://wet-boew.github.io/wet-boew/docs/events-en.html">Events</a></li>
