fixed links in menu

--- a/unmin/ajax/sitemenu-en.html
+++ b/unmin/ajax/sitemenu-en.html
@@ -17,10 +17,10 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 						<details>
 							<summary>Service Canada</summary>
 							<ul role="menu">
-								<li><a href="#"></a>Link</li>
-								<li><a href="#"></a>Link</li>
-								<li><a href="#"></a>Link</li>
-								<li><a href="#"></a>Link</li>
+								<li><a href="#">Link</a></li>
+								<li><a href="#">Link</a></li>
+								<li><a href="#">Link</a></li>
+								<li><a href="#">Link</a></li>
 							</ul>
 						</details>
 					</li>
@@ -28,10 +28,10 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 						<details>
 							<summary>Service Canada</summary>
 							<ul role="menu">
-								<li><a href="#"></a>Link</li>
-								<li><a href="#"></a>Link</li>
-								<li><a href="#"></a>Link</li>
-								<li><a href="#"></a>Link</li>
+								<li><a href="#">Link</a></li>
+								<li><a href="#">Link</a></li>
+								<li><a href="#">Link</a></li>
+								<li><a href="#">Link</a></li>
 							</ul>
 						</details>
 					</li>
